# SpiceExtract

./: CMakeLists.txt  CMakeLists_with_subdirs.txt  Font.font  Makefile  README.txt  SpiceExtract.pro  _generate.sh  compress.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  opt.conf  startQtCreator.sh
core/: CMakeLists.txt  core.cpp  core.h  ng_helper.cpp  ng_helper.h  spiceextr.cpp  spiceextr.h
core/tests/: CMakeLists.txt  ng_helper_test.cpp  spiceextr_test.cpp
examples/: SpiceExtract  tmp4log_config.xml
examples/atlas/mos1/: mos.xml  spiceinput.txt  spicelib.slb  spicelib.slb_bkup
examples/atlas/mos1/idvd/: idsvds1.1.cir  idsvds1.1.out  idsvds2.2.cir  idsvds2.2.exp  idsvds2.2.out  idsvds3.3.cir  idsvds3.3.exp  idsvds3.3.out
examples/atlas/mos1/idvg/: idsvgs.cir  idsvgs.exp  idsvgs.out
examples/atlas/mos1/idvg_1/: idsvgs1.cir  idsvgs1.exp  idsvgs1.out  idsvgs1.out_log
gui/: CMakeLists.txt  QScienceSpinBox.cpp  QScienceSpinBox.h  about.cpp  about.h  about.ui  curveselection.cpp  curveselection.h  curveselection.ui  manualfit.cpp  manualfit.h  manualfit.ui  optparamseditor.cpp  optparamseditor.h  optparamseditor.ui  plot.cpp  plot.h  textedit.qrc  textedit.ui  texteditor.cpp  texteditor.h  texteditor.ui
resourses/tests_data/ngspice_wrapper_data/: idsvds1.1.exp
util/: CMakeLists.txt  dutconfig.cpp  dutconfig.h  duttreemodel.h  editorthread.cpp  editorthread.h  extrthread.cpp  extrthread.h  globals.h
util/tests/: CMakeLists.txt  utils_test.cpp
